Correct bug in test.